# sandipan1.github.io

./: .gitignore  404.html  CNAME  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  hello.py  index.html  mkdocs.yml  newsletter.html  pyproject.toml  sitemap.xml  talk.html  work.html
.github/workflows/: publish.yml
blog/: building-your-rag-evaluation-foundation.html  index.html  stop-tweaking-promptsfix-your-retrieval-and-win.html  synthetic-generation.html  what-happened-in-2024.html
blog/archive/: 2024.html  2025.html
blog/category/: ai-engineering.html  career.html  llm.html  machine-learning.html  personal-development.html  rag.html
docs/: CNAME  index.md  newsletter.md  work.md
docs/blog/: .authors.yml
docs/blog/posts/: 2024-in-review.md  evaluation.md  retrieval_for_generation.md  statistics.md  synthetic generation.md
overrides/partials/: cal-button.html
search/: search_index.json
site/: 404.html  index.html  newsletter.html  sitemap.xml  talk.html  work.html
site/blog/: index.html  stop-tweaking-promptsfix-your-retrieval-and-win.html  what-happened-in-2024.html
site/blog/archive/: 2024.html  2025.html
site/blog/category/: ai-engineering.html  llm.html  machine-learning.html  personal-development.html  rag.html
site/overrides/: blog-post.html  blog.html  main.html
site/search/: search_index.json
