[project]
name = "sandipan1-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel==2.16.0",
    "cachecontrol==0.14.1",
    "cairocffi==1.7.1",
    "cairosvg==2.7.1",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "csscompressor==0.9.5",
    "cssselect2==0.7.0",
    "defusedxml==0.7.1",
    "filelock==3.16.1",
    "ghp-import==2.1.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "griffe==1.5.1",
    "htmlmin2==0.1.13",
    "idna==3.10",
    "jinja2==3.1.4",
    "jsmin==3.0.1",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.2.0",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material[imaging]==9.5.44",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-rss-plugin==1.16.0",
    "mkdocstrings==0.27.0",
    "mkdocstrings-python==1.12.2",
    "msgpack==1.1.0",
    "packaging==24.2",
    "paginate==0.5.7",
    "pathspec==0.12.1",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "pycparser==2.22",
    "pygments==2.18.0",
    "pymdown-extensions==10.12",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==0.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "six==1.16.0",
    "smmap==5.0.1",
    "tinycss2==1.4.0",
    "urllib3==2.2.3",
    "watchdog==6.0.0",
    "webencodings==0.5.1",
]

